# requirements-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  RULES.md  SOUL.md  agent.yaml  main.py  pyproject.toml
.Jules/: palette.md
.github/workflows/: lint.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.planning/notes/: installable-package-architecture.md
.planning/phases/00-5-package-scaffold/: 00-5-CONTEXT.md
.planning/phases/00-bug-triage/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-04-PLAN.md  00-04-SUMMARY.md  00-05-PLAN.md  00-05-SUMMARY.md  00-06-PLAN.md  00-06-SUMMARY.md  00-CONTEXT.md  00-DISCUSSION-LOG.md  00-HUMAN-UAT.md  00-RESEARCH.md  00-REVIEW.md  00-VALIDATION.md  00-VERIFICATION.md
.planning/phases/00.5-package-scaffold/: 00-5-CONTEXT.md  00-5-DISCUSSION-LOG.md  00.5-01-AUDIT.txt  00.5-01-PLAN.md  00.5-01-SUMMARY.md  00.5-02-PLAN.md  00.5-02-SUMMARY.md  00.5-03-PLAN.md  00.5-03-SUMMARY.md  00.5-04-PLAN.md  00.5-04-SUMMARY.md  00.5-PATTERNS.md  00.5-RESEARCH.md  00.5-REVIEW.md  00.5-UAT.md  00.5-VALIDATION.md  00.5-VERIFICATION.md
.planning/phases/01-project-initialisation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: skill-auto-update-skill.md  skill-contract-testing.md
.planning/todos/pending/: 2026-04-21-ai-governance-requirements.md  2026-04-21-conflict-detection.md  2026-04-21-external-system-links.md  2026-04-21-fret-formalisation.md  2026-04-21-gherkin-bdd-generation.md  2026-04-21-ml-lifecycle-domain-knowledge.md  2026-04-21-sysml-formalisation.md  2026-04-21-traceability-management.md  2026-04-21-vcs-ci-linkage.md
compliance/: risk-assessment.md
config/: default.yaml  project.yaml
docs/: requirements_agent_tools.CONSTANTS.md  requirements_agent_tools.db.cli.md  requirements_agent_tools.db.connection.md  requirements_agent_tools.db.embeddings.md  requirements_agent_tools.db.issues.md  requirements_agent_tools.db.md  requirements_agent_tools.db.minutes.md  requirements_agent_tools.db.projects.md  requirements_agent_tools.db.requirements.md  requirements_agent_tools.db.schema.md  requirements_agent_tools.db.updates.md  requirements_agent_tools.init_project.md  requirements_agent_tools.md  requirements_agent_tools.meeting.md  requirements_agent_tools.models.md  requirements_agent_tools.project_md.md  requirements_agent_tools.project_md_cli.md  requirements_agent_tools.project_session.md  requirements_agent_tools.refine.md  requirements_agent_tools.report.md  requirements_agent_tools.req_ops.md  requirements_agent_tools.review.md
hooks/: hooks.yaml
knowledge/: index.yaml
memory/: memory.yaml
shared/: CONSTANTS.py  db.py  md_writer.py  models.py  project_session.py
skills/contact-book-setup/: SKILL.md
skills/elicit-requirements/: SKILL.md
skills/issue-manager/: SKILL.md
skills/meeting-agent/: SKILL.md
skills/new-project-initiation/: SKILL.md
skills/new-project-initiation/scripts/: init.py
skills/project-init/: SKILL.md
skills/project-init/scripts/: init.py
skills/project-update/: SKILL.md
skills/project-update/scripts/: req_ops.py
skills/refine-requirements/: SKILL.md
skills/refine-requirements/references/: fret_grammar.md
skills/refine-requirements/scripts/: refine.py
skills/review-requirements/: SKILL.md
skills/status-report/: SKILL.md
skills/status-report/scripts/: json_to_pdf.py  mcp_report_to_pdf.py  test_mcp_report_to_pdf.py
skills/tech-stack-interview/: SKILL.md
skills/tech-stack-interview/assets/: template.md
skills/tests/: test_mcp_report_to_pdf.py
src/requirements_agent_tools/: CONSTANTS.py  __init__.py  _cli_io.py  init_project.py  meeting.py  models.py  project_md.py  project_md_cli.py  project_session.py  refine.py  report.py  req_ops.py  review.py
src/requirements_agent_tools/db/: __init__.py  __main__.py  _logging.py  _serialization.py  cli.py  connection.py  embeddings.py  issues.py  minutes.py  projects.py  requirements.py  schema.py  updates.py
tests/: test_db.py  test_db_bugs.py  test_init.py  test_models.py  test_project_md.py  test_requirements_behaviour.py  test_setup.py  test_slug_infrastructure.py
