[project]
name = "requirements-agent"
version = "0.1.0"
description = "Enterprise agent for autonomous requirements management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "prek>=0.3.9",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "sqlite-vec>=0.1.9",
]

[project.scripts]
init-project = "requirements_agent_tools.init_project:main"
refine = "requirements_agent_tools.refine:main"
req-ops = "requirements_agent_tools.req_ops:main"
review = "requirements_agent_tools.review:main"
report = "requirements_agent_tools.report:main"
meeting = "requirements_agent_tools.meeting:main"
db = "requirements_agent_tools.db.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/requirements_agent_tools"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "lazydocs>=0.4.8",
    "pre-commit>=4.6.0",
    "ty>=0.0.32",
    "bandit>=1.9.4",
    "interrogate>=1.7.0",
]

[tool.interrogate]
fail-under = 90
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
verbose = 0
quiet = false
color = true
exclude = ["tests", "docs"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src/requirements_agent_tools"]

[tool.ty.rules]
# ty flags sqlite3.Row dict-style access as invalid-argument-type
# because the inferred type is Any | tuple[Any, ...].
# Suppress as warn until sqlite-vec ships type stubs.
invalid-argument-type = "warn"
