[project]
name = "requirements-agent"
version = "0.1.0"
description = "AI agent for requirements engineering, backed by a local SQLite-backed MCP server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "prek>=0.3.9",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "tabulate>=0.10.0",
    "sqlalchemy>=2.0.49",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/requirements_mcp",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/requirements_mcp/tests",
    "skills/tests",
]

[dependency-groups]
dev = [
    "lazydocs>=0.4.8",
    "pre-commit>=4.6.0",
    "ty>=0.0.32",
    "bandit>=1.9.4",
    "interrogate>=1.7.0",
]

[tool.interrogate]
fail-under = 80
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
verbose = 0
quiet = false
color = true
exclude = ["tests", "docs"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = [
    "packages/requirements_mcp/src",
]
